# SS2021B-DBrown

./: .coveragerc  .gitignore  README.md  pyproject.toml
finorch/: testfile.py
finorch/client/: client.py
finorch/config/: config.py
finorch/sessions/: __init__.py  abstract_client.py  abstract_session.py  abstract_wrapper.py  database.py
finorch/sessions/cit/: client.py
finorch/sessions/local/: __init__.py  client.py  session.py  wrapper.py
finorch/transport/: abstract_transport.py  exceptions.py  local.py  ssh.py  transport.py
finorch/wrapper/: wrapper.py
scripts/: finorch_key_manager.py
tests/: test_finorch.py
tests/integration/: test_local_end_to_end.py
tests/integration/local/: test_local_end_to_end.py
tests/unit/: test_abstract_client.py  test_abstract_transport.py  test_abstract_wrapper.py  test_client.py  test_config.py  test_database.py  test_key_manager.py  test_wrapper.py
tests/unit/cit/: test_cit_client.py
tests/unit/local/: test_local_client.py  test_local_session.py  test_local_transport.py
tests/unit/ozstar/: test_ozstar_client.py
tests/unit/ssh/: test_ssh_transport.py
