[tool.poetry]
name = "finorch"
version = "0.1.0"
description = ""
authors = ["Lewis Lakerink <llakerink@swin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
finesse = "^3.0a1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.1.1"
pytest-cov = "^3.0.0"
pyflakes = "^2.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
