[tool.poetry]
name = "finorch"
version = "0.1.0"
description = ""
authors = ["Lewis Lakerink <llakerink@swin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
finesse = {git = "https://git.ligo.org/finesse/finesse3.git", rev = "develop"}
appdirs = "^1.4.4"
exc = "^0.92"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.1.1"
pytest-cov = "^3.0.0"
pyflakes = "^2.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
